--- a/f299-template-pi-paper/fatec-template.tex
+++ b/f299-template-pi-paper/fatec-template.tex
@@ -10,23 +10,59 @@
 
 %% Pacotes utilizados
 \usepackage[]{fatec-article}
-\Author{1}{Name={Autor 1\\ Autor 2 \\ Autor 3\\ Autor 4}}
+\Author{1}{Name={Amanda de Oliveira Costa\\ Arthur Ribeiro Dias Fudali \\ Diego Baltazar de Souza Claudio \\ Giovana da Silva Albanês Santos \\ Igor Leite Gomes }}
 
-\Author{2}{Name={\{ autor1@fatec.sp.gov.br \}\\ \{ autor2@fatec.sp.gov.br \} \\ \{ autor3@fatec.sp.gov.br\} \\ \{ autor4@fatec.sp.gov.br \}}}
+\Author{2}{Name={\{ amanda.costa47@fatec.sp.gov.br  \}\\ \{ arthur.fudali@fatec.sp.gov.br \} \\ \{ diego.claudio@fatec.sp.gov.br\} \\ \{ giovana.santos30@fatec.sp.gov.br \} \\ \{ igor.gomes4@fatec.sp.gov.br \}}}
 
 %% Definição das palavras-chaves/keywords
-\Keyword{1}{Artigo}{Article}
-\Keyword{2}{Latex}{Latex}
-\Keyword{3}{Informática}{Informatic}
+\Keyword{1}{TDA}{ADHD}
+\Keyword{2}{atenção}{attention}
+\Keyword{3}{rastreamento ocular}{eye tracking}
+\Keyword{4}{gamificação}{gamification}
+\Keyword{5}{ODS 3}{SDG 3}
 
 %%%% Resumo no idioma primário (brazilian)
 \begin{Abstract}[brazilian]%% Idioma (brazilian ou english)
-  O resumo FATEC Registro é uma descrição completa e concisa dos componentes-chave da metodologia do estudo e dos achados importantes da pesquisa. Normalmente, o resumo é o primeiro encontro do leitor com uma pesquisa ou relato, sendo algumas vezes o único elemento recuperado e/ou revisado nas bases de dados científicos. Esse elemento provê a primeira impressão, muitas vezes a mais importante, identificando o valor potencial ou a relevância do enfoque da pesquisa e dos resultados. Se o resumo for bem escrito, ele atrairá leitores para obter uma cópia do manuscrito completo que será incorporado aos que já foram encontrados, e seu trabalho será citado. Se o resumo for mal escrito, a pesquisa poderá ser ignorada ou, até mesmo, esquecida.
+  O Transtorno de Déficit de Atenção (TDA) é uma condição neuropsicológica que pode
+afetar significativamente o desempenho de adultos em diversas esferas da vida, como
+trabalho, estudos e relações interpessoais. O diagnóstico tradicional envolve avaliações
+clínicas e testes padronizados, os quais nem sempre estão disponíveis de forma acessível ou
+apresentam dados objetivos suficientes para um rastreio inicial eficaz. Este estudo propõe
+uma abordagem tecnológica que integra uma plataforma digital gamificada, baseada no
+Teste de Desempenho Contínuo (TDC), com técnicas de rastreamento ocular em tempo real.
+A proposta tem como objetivo identificar possíveis indícios de TDA em adultos por meio da
+análise de desempenho atencional durante a execução de tarefas gamificadas. O sistema
+registra dados como tempo de reação, erros de omissão e comissão, variabilidade nas
+respostas e padrões de fixação ocular, os quais são processados automaticamente. Com base
+na comparação com bases de dados normativas, o sistema fornece um feedback
+interpretativo ao usuário, podendo contribuir como ferramenta complementar de triagem
+inicial. A acessibilidade da plataforma, que roda diretamente no navegador, e seu caráter
+lúdico e autônomo tornam a solução promissora para ampliar o acesso ao rastreamento
+precoce de indícios do transtorno. A proposta está alinhada ao terceiro Objetivo de
+Desenvolvimento Sustentável (ODS) da Agenda 2030 da ONU, que visa garantir saúde e
+bem-estar para todas as pessoas, promovendo inovações tecnológicas para uma saúde mais
+inclusiva, eficiente e orientada por dados objetivos.
 \end{Abstract}
 
 %%%% Resumo no idioma secundário (english)
 \begin{Abstract}[english]%% Idioma (brazilian ou english)
-The summary is a complete and concise description of the key components of the study methodology and important research findings. Typically, the summary is the reader's first encounter with a research report or paper, and sometimes it is the only element retrieved and/or reviewed in scientific databases. This element provides the first impression, often the most important one, identifying the potential value or relevance of the research approach and findings. If the summary is well-written, it will attract readers to obtain a copy of the full manuscript that will be incorporated into those already found, and your work will be cited. If the summary is poorly written, the research may be ignored or even forgotten.
+Attention Deficit Disorder (ADD) is a neuropsychological condition that can
+significantly affect adults' performance in various areas of life, such as work, studies, and
+interpersonal relationships. Traditional diagnosis involves clinical evaluations and standardized
+tests, which are not always accessible or provide sufficient objective data for effective initial
+screening. This study proposes a technological approach that integrates a gamified digital
+platform, based on the Continuous Performance Test (CPT), with real-time eye tracking
+techniques. The proposal aims to identify possible signs of ADD in adults by analyzing
+attentional performance during the execution of gamified tasks. The system records data
+such as reaction time, omission and commission errors, response variability, and eye fixation
+patterns, which are processed automatically. Based on comparison with normative databases,
+the system provides interpretative feedback to the user, and can contribute as a
+complementary tool for initial screening. The accessibility of the platform, which runs directly
+in the browser, and its playful and autonomous nature make it a promising solution for
+expanding access to early screening for signs of the disorder. The proposal is aligned with the
+third Sustainable Development Goal (SDG) of the UN 2030 Agenda, which aims to ensure
+health and well-being for all people, promoting technological innovations for more inclusive,
+efficient health care guided by objective data.
 \end{Abstract}
 
 %% Processamento de entradas (itens) do índice remissivo (makeindex)
