atualiza a secao de introdrucao

--- a/f299-template-pi-paper/Topicos/introducao.tex
+++ b/f299-template-pi-paper/Topicos/introducao.tex
@@ -1,6 +1,60 @@
-Uma boa introdução precisa informar ao leitor de forma clara e objetiva o que será trabalhado no desenvolvimento e na conclusão do texto. Nela, apresentam-se os principais temas que serão discutidos ao longo do conteúdo, então deve servir como um convite para que o texto seja lido até o final.
+A Organização das Nações Unidas (ONU) é uma instituição que visa estabelecer a paz,
+segurança e desenvolvimento global. A ONU conta com 193 países membros que formam a
+Assembleia Geral, responsável por desenvolver as políticas da organização. Em 2015, como
+parte da Agenda 2030 para o Desenvolvimento Sustentável, foram criados 17 objetivos que
+abrangem desde a melhoria da indústria até o aprimoramento da saúde da população. Esse
+conjunto de metas constitui um plano de ação ambicioso para as pessoas, o planeta e a
+prosperidade. Este trabalho visa contribuir para o terceiro objetivo, que busca garantir o
+acesso à saúde e promover o bem estar, ao desenvolver uma plataforma digital gamificada
+com o objetivo de auxiliar nos possíveis indícios do Transtorno de Déficit de Atenção (TDA)
+em adultos.
 
-A introdução é essencial para motivar o público a conferir o conteúdo por inteiro. Além desse convite decisivo, é nela que o objetivo do texto deve ser destacado: (1) Porque o artigo é relevante? e (2) Como ele pode contribuir para a vida do leitor?.
+O Transtorno do Déficit de Atenção é uma condição neurobiológica de causas
+genéticas, que afeta milhões de pessoas em todo o mundo. É caracterizada por sintomas de
+desatenção, impulsividade, e, em alguns casos, hiperatividade, afetando significativamente o
+desempenho acadêmico, profissional e social dos afetados. Embora o diagnóstico clínico do
+TDA seja baseado tradicionalmente em entrevistas e questionários subjetivos, avanços
+tecnológicos têm permitido o uso de ferramentas mais robustas e quantitativas para apoiar
+esse processo.
+https://bvsms.saude.gov.br/transtorno-do-deficit-de-atencao-com-hiperatividade-tdah/ Entre
+essas ferramentas, destaca-se o eye tracking (ou rastramento ocular), esta é uma técnica
+que consiste em usar o posicionamento dos olhos de uma pessoa para obter informações
+sobre onde ela está olhando. Isso pode ser feito usando luzes infravermelhas, que calculam
+exatamente onde a pessoa está olhando com base nas reflexões da luz na retina, ou por
+meio de câmeras que monitoram visualmente a posição dos olhos e identificam sua direção.
 
+Em ambientes controlados, o teste com eye tracking envolve a realização de tarefas
+padronizadas, nas quais o comportamento visual do participante é monitorado sem
+interferência direta de um moderador. Essa abordagem objetiva permite uma coleta mais
+confiável de dados, reduzindo o viés associado ao autorrelato e aumentando a credibilidade
+da análise. Além disso, a comparação dos dados obtidos com padrões normativos permite
+identificar desvios significativos no desempenho visual atencional, muitas vezes
+imperceptíveis a métodos tradicionais.
 
+Quando aplicada em um teste diagnóstico, a técnica permite acompanhar com
+precisão os movimentos dos olhos de um indivíduo durante a realização de tarefas
+específicas, fornecendo dados objetivos e detalhados sobre onde, por quanto tempo e em
+que sequência uma pessoa fixa seu olhar em determinados estímulos visuais. Estudos
+demonstram que pessoas com TDA apresentam menor tempo de fixação e padrão visual
+mais disperso ao realizarem testes de desempenho, sugerindo dificuldade em manter a
+atenção sustentada e filtragem de estímulos irrelevantes (Lim et al., 2024).
 
+O Teste de Desempenho Contínuo (TDC) é uma medida padronizada amplamente
+utilizada na neuropsicologia para avaliar métricas de atenção sustentada, impulsividade,
+tempo de resposta e variabilidade dos tempos de reação. Trata-se de uma tarefa
+computadorizada na qual o usuário responde e reage a estímulos apresentados
+sequencialmente, permitindo medidas de desempenho atencional ao longo do tempo. Os
+serious games, ou jogos sérios, são aplicações digitais desenvolvidas com finalidades que
+vão além do entretenimento, como educação, treinamento ou reabilitação cognitiva. No
+contexto ne análises neuropsicológicas, eles vêm sendo utilizados como ferramentas
+complementares aos testes tradicionais, oferecendo ambientes imersivos e interativos que
+auxiliam no engajamento do usuário e a mensuração de habilidades cognitivas.
+
+Com isso, a aplicação do eye tracking em algo como os jogos sérios, podem servir não
+apenas como ferramentas para complementar o diagnóstico clínico, mas também como um
+potencial instrumento de triagem inicial. A análise dos dados pode indicar o grau de
+desatenção apresentado por um indivíduo em diferentes contextos e contribuir para decisões
+clínicas mais embasadas. Assim, propomos por meio deste estudo a criação de um software
+gamificado, que usa as informações obtidas pelo rastreamento ocular de possíveis afetados
+pelo TDA e as processa, usando as métricas do TDC para gerar um resultado médio do
+desempenho geral, fornecendo uma possível indicação para o transtorno.
