atualiza a secao de objetivo

--- a/f299-template-pi-paper/Topicos/objetivo.tex
+++ b/f299-template-pi-paper/Topicos/objetivo.tex
@@ -1,3 +1,16 @@
-A definição do objetivo geral e dos objetivos específicos é fundamental para a realização de um trabalho acadêmico e/ou científico. Primeiramente, você deverá definir qual é o seu objetivo geral, lembrando que o mesmo deve resumir e apresentar a ideia central do trabalho, descrevendo também a sua finalidade.
+Desenvolver uma plataforma digital gamificada, acessível por navegador, que utiliza
+rastreamento ocular e métricas de desempenho atencional para auxiliar na triagem inicial de
+indícios do Transtorno de Déficit de Atenção (TDA) em adultos.
 
-Após a definição do objetivo geral, você deverá definir os objetivos específicos do seu trabalho que darão uma maior delimitação ao tema, além de detalhar os processos necessários para a realização do trabalho.
+\subsection*{OBJETIVOS ESPECÍFICOS} 
+
+\begin{itemize}
+    \item Integrar o Teste de Desempenho Contínuo (TDC) a um jogo digital com tarefas que
+    simulam desafios atencionais.
+    \item  Aplicar técnicas de rastreamento ocular em tempo real para registrar padrões de
+    atenção durante a execução das tarefas.
+    \item Processar automaticamente os dados coletados e compará-los com parâmetros
+    normativos para gerar feedback ao usuário.
+    \item Promover uma solução acessível, autônoma e alinhada ao ODS 3 da ONU, que amplie
+    o acesso à triagem inicial de TDA.
+\end{itemize}
