--- a/f299-template-pi-paper/Topicos/estadodaarte.tex
+++ b/f299-template-pi-paper/Topicos/estadodaarte.tex
@@ -1,22 +1,51 @@
-Nesta seção, você deverá realizar um mapeamento de toda a produção acadêmica sobre o tema do seu projeto. É um processo bastante importante porque reúnem todas as pesquisas e descrevem as conclusões das pesquisas sobre o tema \cite{smith:99}. Para escrever um bom estado da arte, você poderá utilizar algumas perguntas norteadoras, tais como:
+O diagnóstico do Transtorno de Déficit de Atenção (TDA) em adultos continua sendo
+um desafio clínico significativo. Tradicionalmente, o processo diagnóstico baseia-se em
+entrevistas e testes clínicos, autorrelato e relatos de informantes, instrumentos que, embora
+úteis, podem ser afetados por viés retrospectivo, subjetividade do paciente, e simulação dos
+testes, resultando em casos de falsos positivos ou negativos. Dessa forma, o interesse por
+abordagens objetivas e tecnologicamente assistidas, que combinem dados neuropsicológicos
+e comportamentais com técnicas de análises automatizadas, aumentou. Estudos recentes
+têm investigado o uso de jogos digitais sérios como ferramentas de avaliação e treinamento
+cognitivo, com foco na atenção contínua. Nascimento e Menezes (2020) exploraram a relação
+entre a prática regular de videogames e o desempenho em atenção sustentada, avaliado
+pelo Conners’ Continuous Performance Test II (CPT II), uma versão amplamente utilizada do
+Teste de Desempenho Contínuo (TDC). Embora não tenham encontrado diferenças de
+performance entre jogadores de videogames de ação, não ação e não jogadores, os autores
+identificaram o sexo como uma variável relevante, pois notara diferença entre tempo de
+reação e número de erros. O estudo destaca a complexidade das interações entre fatores
+individuais e experiências digitais, sugerindo que a aplicação de jogos, mesmo quando
+classificados como serious games, precisam de cuidados na metodologia e no controle de
+variáveis, com o fim de evitar interferências no desempenho atencional.
 
-\begin{enumerate}
-    \item O que as atuais pesquisas científicas concluíram sobre o tema?
-    \item Quais as divergências dos pesquisadores sobre o assunto?
-    \item Quem está pesquisando sobre esse tema?
-    \item Onde estão fazendo essas pesquisas?
-\end{enumerate}
+Nesse contexto, Elbaum et al. (2020) exploraram o potencial diagnóstico da integração
+entre o MOXO-dCPT (um teste de desempenho contínuo com fases estruturadas de distração
+auditiva e visual) e dados de rastreamento ocular (eye tracking). O estudo contou com uma
+amostra de 85 adultos (43 com diagnóstico formal de TDAH e 42 controles saudáveis) e
+analisou o padrão de atenção visual ao longo de diferentes partes do teste. Os resultados
+demonstraram que indivíduos com TDAH apresentaram maior tempo de fixação em áreas
+irrelevantes da tela, particularmente em condições com distrações visuais, o que os autores
+interpretaram como uma medida direta de distratibilidade atencional objetiva. Essa métrica
+comportamental demonstrou maior poder discriminativo em comparação às melhores
+pontuações tradicionais do MOXO. Além disso, os autores propuseram que as partes do teste
+com distrações visuais poderiam ser utilizadas isoladamente, reduzindo o tempo do teste e
+mantendo a precisão.
 
-Em outras palavras, o estado da arte destaca os aspectos de outras pesquisas, mas também identifica as lacunas que existem nessas pesquisas. Ou seja: analisa o que as pesquisas falaram e o que não falaram sobre o tema \cite{Alencar2007,Beltrano2021,Fulano2021}.
+Avançando nesse campo, Wiebe et al. (2024) criaram uma solução diagnóstica que
+envolve um ambiente de realidade virtual (VR), onde os participantes realizavam um teste de
+desempenho imersivo sob a ocorrência de distrações simuladas em um ambiente 3D.
+Durante a tarefa, foram coletados dados simultâneos de eye tracking, movimentos da
+cabeça, eletroencefalograma (EEG) e desempenho atencional. O modelo de IA foi treinado
+em um conjunto de 50 participantes e testado de forma independente em outro conjunto de
+36 indivíduos. O modelo final, com apenas 11 variáveis selecionadas, alcançou 81\% de
+acurácia, 78\% de sensibilidade e 83\% de especificidade no conjunto de teste.
 
-Segundo \textcite{Ramos2003,Carvalho2004}, para que você possa descrever as pesquisas/trabalhos que estão relacionados ao seu, não esqueça de citá-los ao decorrer do texto. Para isso, você poderá utilizar o comando $\backslash$cite para citação implícita ou o comando $\backslash$textcite para citações explícitas.
-
-As citações diretas curtas (de até três linhas) acompanham o corpo do texto e se destacam com aspas duplas. Caso o texto original já contenha aspas, estas devem ser substituídas por aspas simples. Enquanto que, para representar as citações diretas longas (com mais de três linhas), estas devem ser transcritas em parágrafo distinto, da seguinte forma:
-
-\begin{displayquote}
-   Toda citação direta com mais de três linhas é considerada uma citação direta longa.
-Este tipo de citação deve ser escrita sem aspas, em parágrafo distinto, com fonte de tamanho 10, espaçamento simples e com recuo de 4cm da margem esquerda, terminando na margem direita, conforme ilustrado neste exemplo \cite{Andujar2006}.
-\end{displayquote}
-
-Vale ressaltar que a utilização de citações diretas longas deve ser evitada durante a escrita de artigos científicos. Conforme visto em \textcite{Kalakota2002,Purcidonio2008}, os dados de cada referência podem ser obtidos de um arquivo com a extensão bib, geralmente na própria página de \textit{download} da referência (artigos, livros, etc.) ou, ainda, a partir do Google Acadêmico, etc.
+Os estudos indicam que a utilização de tecnologias de rastreamento ocular, tarefas
+cognitivas com análises embasadas dos dados representam um avanço significativo em
+relação aos métodos tradicionais de diagnóstico. O uso de serious games para coleta de
+dados de desempenho também é eficaz, como mostra o trabalho de Nascimento e Menezes.
+O trabalho de Elbaum et al. oferece um modelo aplicável e eficiente ao integrar eye tracking
+em um teste comercial já existente, o estudo de Wiebe et al. diferencia a proposta ao
+incorporar realidade virtual, aprendizado de máquina e validação externa em amostras
+independentes. Juntos, os estudos reforçam a ideia de que sistemas digitais automatizados
+podem melhorar a precisão diagnóstica do TDAH em adultos.
 
