--- a/f299-template-pi-paper/fatec-template.tex
+++ b/f299-template-pi-paper/fatec-template.tex
@@ -10,6 +10,9 @@
 
 %% Pacotes utilizados
 \usepackage[]{fatec-article}
+\usepackage{graphicx}
+\usepackage{float}
+
 \Author{1}{Name={Amanda de Oliveira Costa\\ Arthur Ribeiro Dias Fudali \\ Diego Baltazar de Souza Claudio \\ Giovana da Silva Albanês Santos \\ Igor Leite Gomes }}
 
 \Author{2}{Name={\{ amanda.costa47@fatec.sp.gov.br  \}\\ \{ arthur.fudali@fatec.sp.gov.br \} \\ \{ diego.claudio@fatec.sp.gov.br\} \\ \{ giovana.santos30@fatec.sp.gov.br \} \\ \{ igor.gomes4@fatec.sp.gov.br \}}}
