comenta as secoes nao utilizadas no arquivo principal

--- a/f299-template-pi-paper/fatec-template.tex
+++ b/f299-template-pi-paper/fatec-template.tex
@@ -104,13 +104,13 @@ efficient health care guided by objective data.
 
 \input{Topicos/metodologia}
 
-\section*{RESULTADOS PRELIMINARES}\label{sect:resultados}
+% \section*{RESULTADOS PRELIMINARES}\label{sect:resultados}%
 
-\input{Topicos/resultados}
+%\input{Topicos/resultados}%
 
-\section*{CONCLUSÃO}\label{sect:conclusao}
+%\section*{CONCLUSÃO}\label{sect:conclusao}%
 
-\input{Topicos/conclusao}
+%\input{Topicos/conclusao} %
 
 \printbibliography
 
